DemoEnvironments/aws-istio-certmanager/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  namespace: tls-apache
spec:
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
